bugfix(table): fix table scrollbar-thumb #782

--- a/packages/table/src/table.less
+++ b/packages/table/src/table.less
@@ -30,6 +30,12 @@
       width: 6px;
       height: 6px;
     }
+
+    &::-webkit-scrollbar-thumb {
+      background: #dcdee5;
+      border-radius: 50%;
+      box-shadow: inset 0 0 6px rgba(204, 204, 204, .3);
+    }
   }
 
   .@{bk-prefix}-fixed-bottom-border {
